[project]
name = "meta-edc"
version = "1.2.8"
description = "META Trial EDC (https://www.isrctn.com/ISRCTN76157257)"
readme = "README.rst"
keywords = [
    "django",
    "clinicedc",
    "META EDC",
    "EDC",
    "clinical trials",
    "META Trial",
    "ISRCTN76157257",
]
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
    { name = "Jonathan Willitts", email = "j.willitts@ucl.ac.uk" }
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = '>=3.12,<3.14'
dependencies = [
    "clinicedc>=2.0.41",
    "edc-he>=1.2.0",
    "edc-microscopy>=1.2.0",
    "edc-mnsi>=1.2.0",
    "edc-phq9>=1.1.0",
    "edc-qol>=1.2.1",
    "notebook>=7.4.7",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = [
    "meta_ae",
    "meta_analytics",
    "meta_auth",
    "meta_consent",
    "meta_dashboard",
    "meta_data_manager",
    "meta_edc",
    "meta_export",
    "meta_labs",
    "meta_lists",
    "meta_pharmacy",
    "meta_prn",
    "meta_rando",
    "meta_reports",
    "meta_screening",
    "meta_sites",
    "meta_subject",
    "meta_visit_schedule",
]
source-include = ["meta_*/templates/**", "meta_*/locale/**", "locale/**"]
source-exclude = ["meta_*/tests/**", "meta_*/notebooks/**", "tests/**"]
namespace = false

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py312"
extend-exclude = [
    "migrations",
    ".tox",
    ".venv",
    "src/meta_analytics/notebooks/",
    "docs/updates/0.1.65/update_1_65_renamed_fields.py",
    "docs/conf.py",
    "src/meta_spfq/notebooks/"
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C90",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "I",
    "INT",
    "N",
    "PD",
    "PERF",
    "PL",
    "PLR",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
    # "FIX",
]
ignore = ["DJ008", "DJ007", "DJ006", "COM812", "PLC0206", "PLR2004", "TRY003"]

[tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
parallel = false
branch = true
source = ["meta_edc"]

[tool.coverage.paths]
source = ["meta_edc"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["*.txt", "*/migrations/*"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[dependency-groups]
lint = [
    "ruff>=0.12.5",
]
docs = [
    "furo>=2025.7.19",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-inline-tabs>=2023.4.21",
]
test = [
    "clinicedc>=2.0.41",
    "clinicedc-tests>=0.1.6",
    "coverage>=7.10.7",
    "django-webtest>=1.9.13",
    "edc-test-settings>=1.1.2",
    "faker>=37.4.2",
    "model-bakery>=1.20.5",
    "time-machine>=2.16.0",
]
notebook = [
    "dj-notebook>=0.7.0",
    "great-tables>=0.18.0",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pdfkit>=1.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "selenium>=4.34.2",
    "tabulate>=0.9.0",
]
develop = [
    'django>=5.2.4,<5.3',
    "clinicedc>=2.0.41",
    "time-machine>=2.16.0",
    'edc-test-settings',
    "django-redis>=6.0.0",
    "ipython>=9.4.0",
]

[tool.uv.sources]
meta-edc = { workspace = true }
clinicedc = { path = "../clinicedc", editable = true }
edc-test-settings = { path = "../edc-test-settings", editable = true }
edc-microscopy = { path = "../edc-microscopy", editable = true }
edc-mnsi = { path = "../edc-mnsi", editable = true }
edc-phq9 = { path = "../edc-phq9", editable = true }
edc-qol = { path = "../edc-qol", editable = true }
edc-he = { path = "../edc-he", editable = true }
