[metadata]
name = meta-edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/meta-trial/meta-edc
license = GPL license, see LICENSE
description=META Trial EDC (http://www.isrctn.com/ISRCTN76157257)
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc META EDC, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    edc==0.4.59
    edc-egfr==0.1.10
    edc-microscopy==0.1.0
    canned-views
    beautifulsoup4

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    meta_edc.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
